more work on codegen

--- a/src/translation/translations/en/dante.json
+++ b/src/translation/translations/en/dante.json
@@ -1,11 +1,5 @@
 {
   "enum": {
-    "O5DanteV1DeadMessageEventTypeOneOfValue": {
-      "notified": "Notified",
-      "rejected": "Rejected",
-      "replayed": "Replayed",
-      "updated": "Updated"
-    },
     "O5DanteV1DeadMessageQueryServiceListDeadMessageEventsSortableFields": {
       "metadata": {
         "timestamp": "Timestamp"
@@ -16,8 +10,8 @@
     },
     "O5DanteV1DeadMessageQueryServiceListDeadMessagesSortableFields": {
       "metadata": {
-        "createdAt": "Created at",
-        "updatedAt": "Updated at"
+        "createdAt": "Created At",
+        "updatedAt": "Updated At"
       }
     },
     "O5DanteV1MessageStatus": {
