--- a/src/translation/translations/en/aws-deployer.json
+++ b/src/translation/translations/en/aws-deployer.json
@@ -17,29 +17,9 @@
       "TERMINAL": "Terminal",
       "UNSPECIFIED": "Unspecified"
     },
-    "O5AwsDeployerV1CloudFormationStackParameterTypeOneOfValue": {
-      "desiredCount": "Desired Count",
-      "rulePriority": "Rule Priority"
-    },
-    "O5AwsDeployerV1ClusterEventTypeOneOfValue": {
-      "configured": "Configured"
-    },
     "O5AwsDeployerV1ClusterStatus": {
       "ACTIVE": "Active",
       "UNSPECIFIED": "Unspecified"
-    },
-    "O5AwsDeployerV1DeploymentEventTypeOneOfValue": {
-      "created": "Created",
-      "done": "Done",
-      "error": "Error",
-      "runStep": "Run Step",
-      "runSteps": "Run Steps",
-      "stackAvailable": "Stack Available",
-      "stackWait": "Stack Wait",
-      "stackWaitFailure": "Stack Wait Failure",
-      "stepResult": "Step Result",
-      "terminated": "Terminated",
-      "triggered": "Triggered"
     },
     "O5AwsDeployerV1DeploymentQueryServiceListDeploymentEventsFilterableFields": {
       "event": {
@@ -75,8 +55,8 @@
     },
     "O5AwsDeployerV1DeploymentQueryServiceListDeploymentsSortableFields": {
       "metadata": {
-        "createdAt": "Created at",
-        "updatedAt": "Updated at"
+        "createdAt": "Created At",
+        "updatedAt": "Updated At"
       }
     },
     "O5AwsDeployerV1DeploymentStatus": {
@@ -89,9 +69,6 @@
       "TRIGGERED": "Triggered",
       "UNSPECIFIED": "Unspecified",
       "WAITING": "Waiting"
-    },
-    "O5AwsDeployerV1EnvironmentEventTypeOneOfValue": {
-      "configured": "Configured"
     },
     "O5AwsDeployerV1EnvironmentQueryServiceListEnvironmentEventsSearchableFields": {
       "event": {
@@ -119,20 +96,13 @@
     },
     "O5AwsDeployerV1EnvironmentQueryServiceListEnvironmentsSortableFields": {
       "metadata": {
-        "createdAt": "Created at",
-        "updatedAt": "Updated at"
+        "createdAt": "Created At",
+        "updatedAt": "Updated At"
       }
     },
     "O5AwsDeployerV1EnvironmentStatus": {
       "ACTIVE": "Active",
       "UNSPECIFIED": "Unspecified"
-    },
-    "O5AwsDeployerV1StackEventTypeOneOfValue": {
-      "configured": "Configured",
-      "deploymentCompleted": "Deployment Completed",
-      "deploymentFailed": "Deployment Failed",
-      "deploymentRequested": "Deployment Requested",
-      "runDeployment": "Run Deployment"
     },
     "O5AwsDeployerV1StackQueryServiceListStackEventsSortableFields": {
       "metadata": {
@@ -151,29 +121,14 @@
     },
     "O5AwsDeployerV1StackQueryServiceListStacksSortableFields": {
       "metadata": {
-        "createdAt": "Created at",
-        "updatedAt": "Updated at"
+        "createdAt": "Created At",
+        "updatedAt": "Updated At"
       }
     },
     "O5AwsDeployerV1StackStatus": {
       "AVAILABLE": "Available",
       "MIGRATING": "Migrating",
       "UNSPECIFIED": "Unspecified"
-    },
-    "O5AwsDeployerV1StepOutputTypeOneOfValue": {
-      "cfPlanStatus": "CF Plan Status",
-      "cfStatus": "CF Status"
-    },
-    "O5AwsDeployerV1StepRequestTypeOneOfValue": {
-      "cfCreate": "CF Create",
-      "cfPlan": "CF Plan",
-      "cfScale": "CF Scale",
-      "cfUpdate": "CF Update",
-      "evalJoin": "Eval Join",
-      "pgCleanup": "PG Cleanup",
-      "pgEvaluate": "PG Evaluate",
-      "pgMigrate": "PG Migrate",
-      "pgUpsert": "PG Upsert"
     },
     "O5AwsDeployerV1StepStatus": {
       "ACTIVE": "Active",
@@ -182,10 +137,6 @@
       "FAILED": "Failed",
       "READY": "Ready",
       "UNSPECIFIED": "Unspecified"
-    },
-    "O5AwsDeployerV1TriggerSourceOneOfValue": {
-      "github": "GitHub",
-      "inline": "Inline"
     }
   },
   "oneOf": {
