more work on codegen-related updates

--- a/src/translation/translations/en/aws-deployer.json
+++ b/src/translation/translations/en/aws-deployer.json
@@ -189,5 +189,13 @@
       "github": "GitHub",
       "inline": "Inline"
     }
+  },
+  "flags": {
+    "quickMode": "Quick Mode",
+    "rotateCredentials": "Rotate Credentials",
+    "cancelUpdates": "Cancel Updates",
+    "dbOnly": "DB Only",
+    "infraOnly": "Infra Only",
+    "importResources": "Import Resources"
   }
 }
